# mania-converter-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  main.rs
binaries/standalone/: Cargo.toml
binaries/standalone/src/: main.rs
binaries/webapp/: Cargo.toml
binaries/webapp/src/: shuttle_main.rs
src/: graphx.rs  lib.rs  main.rs  malody_func.rs  mcz2osz.rs  misc.rs  osu_func.rs  shuttle_main.rs  webapp.rs
src/graphx/: info_generation.rs
src/malody_func/: mcz2osz.rs
src/osu_func/: calc_sr.rs  osz2mcz.rs  osz_func.rs
webapp/: Cargo.toml
webapp/src/: main.rs
