[package]
name = "mania-converter"
version = "0.4.0"
authors = ["Siflorite <monokhrom@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["webapp"]

[dependencies]
walkdir = "2.5"
zip = "2.6"
tempdir = "0.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rayon = "1.10"