[package]
name = "mania-converter"
version = "0.6.0-b"
authors = ["Siflorite <monokhrom@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["binaries/webapp", "binaries/standalone"]

[dependencies]
walkdir = "2.5"
zip = "4.0"
tempdir = "0.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rayon = "1.10"
# For picture generation
handlebars = "6.3"
resvg = "0.45"
lazy_static = "1.5"