[package]
name = "mania-converter-webapp"
version = "0.6.0-b"
authors = ["Siflorite <monokhrom@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# webapp stuff
mania-converter = { path = "../../" }
actix-web = "4.0"
actix-multipart = "0.4"
actix-files = "0.6.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
futures-util = "0.3"
uuid = {version = "1.11.0", features = ["v4"]}
lazy_static = "1.5.0"
mime = "0.3.17"
shuttle-runtime = "0.53.0"
shuttle-actix-web = "0.53.0"